update og meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Regalia '22 | The Annual Cultural Fest</title>
+    <title>Regalia 2022 | The Annual Cultural Fest in RCCIIT</title>
 
     <meta name="author" content="Regalia 2022 Tech Team" />
     <meta name="keywords" content="website annual fest rcciit college" />
@@ -20,21 +20,30 @@
       itemprop="description"
       content="Regalia - The annual cultural fest in RCC Institute of Information Technology 2022"
     />
-    <meta itemprop="image" content="http://website_url/image.jpg" />
+    <meta
+      itemprop="image"
+      content="https://ik.imagekit.io/rain/regalia22/regalia_og_image_ZLL4BGHFD?ik-sdk-version=javascript-1.4.3"
+    />
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="Regalia '22" />
+    <meta name="apple-mobile-web-app-title" content="Regalia 2022" />
 
-    <meta property="og:url" content="http://yourawesomeproject.com" />
+    <meta property="og:url" content="https://regalia2022.co/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Regalia '22" />
-    <meta property="og:image" content="http://website_url/image.jpg" />
+    <meta
+      property="og:title"
+      content="Regalia 2022 | The Annual Cultural Fest in RCCIIT"
+    />
+    <meta
+      property="og:image"
+      content="https://ik.imagekit.io/rain/regalia22/regalia_og_image_ZLL4BGHFD?ik-sdk-version=javascript-1.4.3"
+    />
     <meta
       property="og:description"
       content="Regalia - The annual cultural fest in RCC Institute of Information Technology 2022"
     />
-    <meta property="og:site_name" content="Regalia 2022" />
+    <meta property="og:site_name" content="regalia2022.co" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -42,8 +51,6 @@
     <link rel="manifest" href="/site.webmanifest" />
 
     <link type="text/plain" rel="author" href="/humans.txt" />
-
-    <link rel="stylesheet" href="./contact.css" />
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"
@@ -270,7 +277,8 @@
         <div class="flex w-full flex-wrap items-center justify-center gap-12">
           <!-- 19 may -->
           <div class="flex flex-col items-center">
-            <span class="mb-6 text-min-lg font-bold text-text underline underline-offset-1 decoration-dark md:text-max-lg"
+            <span
+              class="mb-6 text-min-lg font-bold text-text underline decoration-dark underline-offset-1 md:text-max-lg"
               >19 May</span
             >
             <div
@@ -312,7 +320,8 @@
           </div>
           <!-- 20 may -->
           <div class="flex flex-col items-center">
-            <span class="mb-6 text-min-lg font-bold text-text underline underline-offset-1 decoration-dark md:text-max-lg"
+            <span
+              class="mb-6 text-min-lg font-bold text-text underline decoration-dark underline-offset-1 md:text-max-lg"
               >20 May</span
             >
             <div
@@ -517,7 +526,7 @@
         <div
           class="my-6 mx-auto max-w-2xl rounded-lg border border-dark shadow-md"
         >
-          <div class="bg-light rounded-lg overflow-hidden">
+          <div class="overflow-hidden rounded-lg bg-light">
             <img
               src="./images/sponsor-main.jpg"
               alt="Our sponsor novacle image"
@@ -556,7 +565,11 @@
           </div>
         </div>
 
-        <h3 class="text-min-lg md:text-max-lg font-light tracking-tight pt-6 text-center">Our partners</h3>
+        <h3
+          class="pt-6 text-center text-min-lg font-light tracking-tight md:text-max-lg"
+        >
+          Our partners
+        </h3>
 
         <!-- <div class="mt-6 flex flex-wrap items-start justify-center gap-6"> -->
         <!--   <div -->
@@ -599,69 +612,105 @@
         <!--   </div> -->
         <!-- </div> -->
 
-        <div class="flex mt-6 items-center justify-between gap-x-8 overflow-x-scroll" style="::-webkit-scrollbar: {display: none;} -ms-overflow-style: none; scrollbar-width: none;">
+        <div
+          class="mt-6 flex items-center justify-between gap-x-8 overflow-x-scroll"
+          style="
+            ::-webkit-scrollbar: {
+              display: none;
+            }
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+          "
+        >
           <!-- fish o fillet -->
           <div class="divide-x-2 divide-light">
-            <div class="w-56 h-40 bg-white overflow-hidden rounded-lg">
+            <div class="h-40 w-56 overflow-hidden rounded-lg bg-white">
               <a href="https://fishofillet.com/" target="_blank">
                 <img
-                  class="block w-full h-full object-contain object-center p-0"
+                  class="block h-full w-full object-contain object-center p-0"
                   src="./images/fish-fillet.png"
                   alt="Regalia is co-powered by fish o fillet image"
                 />
               </a>
             </div>
             <div class="mt-3 pl-3">
-              <h3 class="font-semibold text-tight text-light text-min-base md:text-max-sm">Co-powered by</h3>
-              <h3 class="font-bold text-text text-min-base md:text-max-base">Fish 'O Fillet</h3>
+              <h3
+                class="font-semibold text-tight text-min-base text-light md:text-max-sm"
+              >
+                Co-powered by
+              </h3>
+              <h3 class="text-min-base font-bold text-text md:text-max-base">
+                Fish 'O Fillet
+              </h3>
             </div>
           </div>
           <!-- driver shaab -->
           <div class="divide-x-2 divide-light">
-            <div class="w-56 h-40 bg-white overflow-hidden rounded-lg">
+            <div class="h-40 w-56 overflow-hidden rounded-lg bg-white">
               <a href="https://www.drivershaab.com/" target="_blank">
                 <img
-                  class="block w-full h-full object-cover object-center p-0"
+                  class="block h-full w-full object-cover object-center p-0"
                   src="./images/driverShaab_logo.png"
                   alt="Our associate sponsor Driver Shaab image"
                 />
               </a>
             </div>
             <div class="mt-3 pl-3">
-              <h3 class="font-semibold text-tight text-light text-min-base md:text-max-sm">Associate sponsor</h3>
-              <h3 class="font-bold text-text text-min-base md:text-max-base">DriverShaab</h3>
+              <h3
+                class="font-semibold text-tight text-min-base text-light md:text-max-sm"
+              >
+                Associate sponsor
+              </h3>
+              <h3 class="text-min-base font-bold text-text md:text-max-base">
+                DriverShaab
+              </h3>
             </div>
           </div>
           <!-- mio amore -->
           <div class="divide-x-2 divide-light">
-            <div class="w-56 h-40">
+            <div class="h-40 w-56">
               <a href="https://mioamoreshop.com/" target="_blank">
                 <img
-                  class="block rounded-lg w-full h-full object-cover object-center p-0"
+                  class="block h-full w-full rounded-lg object-cover object-center p-0"
                   src="./images/sponsor-1.jpg"
                   alt="Our celebration partner Mio amore image"
                 />
               </a>
             </div>
             <div class="mt-3 pl-3">
-              <h3 class="font-semibold text-tight text-light text-min-base md:text-max-sm">Celebration partner</h3>
-              <h3 class="font-bold text-text text-min-base md:text-max-base">Mio Amore</h3>
+              <h3
+                class="font-semibold text-tight text-min-base text-light md:text-max-sm"
+              >
+                Celebration partner
+              </h3>
+              <h3 class="text-min-base font-bold text-text md:text-max-base">
+                Mio Amore
+              </h3>
             </div>
           </div>
           <!-- Fever fm -->
           <div class="divide-x-2 divide-light">
-            <div class="w-56 h-40 bg-black rounded-lg overflow-hidden">
-              <a href="https://www.fever.fm/partner-with-us.html" target="_blank">
+            <div class="h-40 w-56 overflow-hidden rounded-lg bg-black">
+              <a
+                href="https://www.fever.fm/partner-with-us.html"
+                target="_blank"
+              >
                 <img
-                  class="block w-full h-full object-contain object-center p-0"
+                  class="block h-full w-full object-contain object-center p-0"
                   src="./images/sponsor-2.jpg"
                   alt="Our radio partner fever fm image"
                 />
               </a>
             </div>
             <div class="mt-3 pl-3">
-              <h3 class="font-semibold text-tight text-light text-min-base md:text-max-sm">Radio partner</h3>
-              <h3 class="font-bold text-text text-min-base md:text-max-base">Fever FM</h3>
+              <h3
+                class="font-semibold text-tight text-min-base text-light md:text-max-sm"
+              >
+                Radio partner
+              </h3>
+              <h3 class="text-min-base font-bold text-text md:text-max-base">
+                Fever FM
+              </h3>
             </div>
           </div>
         </div>
